CSCI21/Oct8/compiling_error.txt
C:\Users\Thinkpad\github\CSCI21\Oct8\main.cpp: In function 'int main()':
C:\Users\Thinkpad\github\CSCI21\Oct8\main.cpp:80:11: error: expected primary-expression before 'if'
   cout << if(lohi) !(x > y);
           ^~
